Add JVM argument for enabling access to internal methods during tests. WARNING: This will not longer work with JDK17 It also crashs JDK 8. :-(